# Guided-Reader-Redux

./: .gitignore  README.md
client/: .env.production  next.config.ts  package-lock.json  package.json  server.js  vite.config.ts
client/locales/home/: el.json  en.json
client/locales/login/: el.json  en.json
client/messages/: el.json  en.json
client/routes/: index.js
client/src/: entry-client.tsx  entry-server.tsx  index.css  index.tsx  router.tsx  types.ts
client/src/app/[locale]/: layout.tsx  page.tsx
client/src/components/: client-only.tsx
client/src/components/annotation/: annotation.module.css  annotation.tsx  index.tsx
client/src/components/annotation-list/: annotation-list.module.css  annotation-list.tsx
client/src/components/button/: button.module.css  button.tsx
client/src/components/card/: card.module.css  card.tsx  index.tsx
client/src/components/header/: header.module.css  header.tsx
client/src/components/hide-icon/: hide-icon.module.css  hide-icon.tsx  index.tsx
client/src/components/icon/: icon.module.css  icon.tsx
client/src/components/index/annotation/: annotation.module.css  annotation.tsx
client/src/components/index/annotation-list/: annotation-list.tsx
client/src/components/index/reader/: reader.tsx
client/src/components/index/reader-modal/: reader-modal.tsx
client/src/components/index/text-list/: text-list.module.css  text-list.tsx
client/src/components/index/text-list-item/: text-list-item.module.css  text-list-item.tsx
client/src/components/index/text-list-modal/: index.tsx
client/src/components/index/text-modal/: text-modal.tsx
client/src/components/input/: input.module.css  input.tsx
client/src/components/label/: label.module.css  label.tsx
client/src/components/like-button/: index.tsx  like-button.module.css  like-button.tsx
client/src/components/lucide/: index.ts  loader-circle.tsx
client/src/components/navbar/: navbar.module.css  navbar.tsx
client/src/components/profile-picture/: index.tsx  profile-picture.module.css  profile-picture.tsx
client/src/components/reader/: index.tsx  reader.module.css  reader.tsx
client/src/components/reader-modal/: index.tsx  reader-modal.module.css  reader-modal.tsx
client/src/components/routes/index/annotation/: annotation.module.css  annotation.tsx
client/src/components/routes/index/annotation-list/: annotation-list.module.css  annotation-list.tsx  index.tsx
client/src/components/routes/index/reader/: reader.tsx
client/src/components/routes/index/reader-modal/: index.tsx  reader-modal.tsx
client/src/components/routes/index/text-list/: text-list.tsx
client/src/components/routes/index/text-list-item/: index.tsx
client/src/components/routes/index/text-modal/: text-modal.module.css  text-modal.tsx
client/src/components/state/: error-state.tsx  index.ts  loading-state.tsx
client/src/components/state/styles/: loading-state.module.css
client/src/components/text-list/: index.tsx  text-list-items.tsx  text-list.tsx
client/src/components/text-list-item/: index.tsx  text-list-item.module.css  text-list-item.tsx
client/src/components/text-list-modal/: index.tsx  text-list-content.tsx  text-list-modal.module.css  text-list-modal.tsx
client/src/components/text-modal/: index.tsx  text-modal.module.css  text-modal.tsx
client/src/contexts/: text-context.tsx  user-context.tsx
client/src/i18n/: routing.ts
client/src/layout/: layout.tsx
client/src/lib/: i18n.ts
client/src/routes/: index.tsx
client/src/routes/index/: index.tsx
client/src/routes/login/: login.module.css  login.tsx
client/src/routes/not-found/: index.tsx  not-found.module.css  not-found.tsx
client/src/routes/user/: index.tsx  user.module.css  user.tsx
client/src/styles/: globals.css
client/src/types/: index.ts
client/src/utils/: annotation.ts  api.ts  text-list.ts  text.ts
client/utils/: auth.js  ssr.js
server/: CMakeLists.txt  database_schema.sql  main.cpp  pch.hpp  server.cpp  server.hpp  sslstream.cpp  sslstream.hpp  utils.cpp  utils.hpp
server/api/: annotation.cpp  api.hpp  discord.cpp  logout.cpp  policy.cpp  profile.cpp  text.cpp  titles.cpp  user.cpp  vote.cpp
server/auth/: email.cpp  email.hpp  httpclient.cpp  httpclient.hpp  session.cpp  session.hpp
server/db/: postgres.cpp  postgres.hpp  redis.cpp  redis.hpp
server/env/: config.h.in
server/request/: apikey.cpp  apikey.hpp  middleware.cpp  middleware.hpp  request.cpp  request.hpp  request_handler.hpp
(+2 files in other folders)
